@@ -1,6 +1,7 @@
 #### v0.4.8 - 2014/08/xx
 * Added user authorization.
 * Added event system.
+* Added request recorder.
 
 
 #### v0.4.8 - 2014/08/28
